<resources>
    <string name="app_name">WordsFactory</string>

    <string name="splash_screen">girl</string>

    <string name="intro">intro</string>
    <string name="skip">Skip</string>
    <string name="OnboardingDescription">Quarantine is the perfect time to spend your \n day learning something new, from anywhere! \n</string>
    <string name="next">Next</string>
    <string name="start">Let’s Start</string>

    <string name="signUp">Sign up</string>
    <string name="login">Log in</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="account">Create your account</string>

    <string name="title_activity_bottom_navigate">BottomNavigateActivity</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_training">Training</string>
    <string name="title_video">Video</string>

    <string name="cooking">Cooking</string>
    <string name="transcription">[ˈkʊkɪŋ]</string>
    <string name="titleTextPartOfSpeech">Part Of Speech:</string>
    <string name="textPartOfSpeech">Noun</string>
    <string name="meaning">Meanings:</string>
    <string name="addToDictionary">Add to Dictionary</string>
    <string name="meaning1">The practice or skill of preparing food by combining, mixing, and heating ingredients.</string>
    <string name="example">Example: </string>
    <string name="example1">he developed an interest in cooking.</string>

    <string name="startTraining">Start</string>
    <string name="go">GO!</string>

    <string name="finish">Training is finished</string>
    <string name="again">Again</string>
</resources>