<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tsu.wordsfactory.ui.home.HomeFragment"
        android:label="@string/title_dictionary"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.tsu.wordsfactory.ui.dashboard.DashboardFragment"
        android:label="@string/title_training"
        tools:layout="@layout/fragment_dashboard" >
        <action
            android:id="@+id/action_navigation_dashboard_to_testActivity"
            app:destination="@id/testActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.tsu.wordsfactory.ui.notifications.NotificationsFragment"
        android:label="@string/title_video"
        tools:layout="@layout/fragment_notifications" />
    <activity
        android:id="@+id/testActivity"
        android:name="com.tsu.wordsfactory.TestActivity"
        android:label="activity_test"
        tools:layout="@layout/activity_test" />
</navigation>