<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextTextSearch"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/input_background"
            android:fontFamily="@font/rubik"
            android:hint="@string/title_dictionary"
            android:inputType="text"
            android:padding="16dp"
            android:textFontWeight="400"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:background="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout2"
        app:layout_constraintTop_toTopOf="@+id/textInputLayout2" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowWordAndSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:constraint_referenced_ids="textWord, textTranscription, imageSound"
        app:flow_horizontalGap="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <TextView
        android:id="@+id/textWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:lineHeight="32dp"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textTranscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:lineHeight="32dp"
        android:textColor="@color/primary"
        android:textFontWeight="400"
        android:textSize="14sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/textWord"
        app:layout_constraintTop_toTopOf="@+id/textWord"/>

    <ImageButton
        android:id="@+id/imageSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:contentDescription="@string/transcription"
        tools:layout_editor_absoluteX="48dp"
        tools:layout_editor_absoluteY="87dp"
        app:layout_constraintStart_toStartOf="@+id/textTranscription"
        app:layout_constraintTop_toTopOf="@+id/textWord" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flowPartOfSpeech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:constraint_referenced_ids="titleTextPartOfSpeech, textPartOfSpeech"
        app:flow_horizontalGap="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flowWordAndSound" />

    <TextView
        android:id="@+id/titleTextPartOfSpeech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:lineHeight="26dp"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textPartOfSpeech"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_medium"
        android:gravity="center"
        android:lineHeight="21dp"
        android:textColor="@color/black"
        android:textFontWeight="400"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textMeanings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/rubik_medium"
        android:lineHeight="26dp"
        android:textColor="@color/black"
        android:textFontWeight="500"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flowPartOfSpeech" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMeanings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonAddToDictionary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textMeanings"
        tools:listitem="@layout/item_meaning" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddToDictionary"
        style="@style/ButtonOrange"
        android:layout_width="309dp"
        android:layout_height="50dp"
        android:layout_marginBottom="76dp"
        android:text="@string/addToDictionary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>